--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -24127,7 +24127,7 @@ dl li {
 }
 
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item.dropdown i {
-    margin-right: .5rem;
+    margin-left: .5rem;
     vertical-align: middle;
 }
 
