--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -23303,6 +23303,7 @@ dl li {
     border-bottom-width: 1px;
     font-weight: 500;
     font-size: 1rem;
+    line-height: 27px
 }
 
 .table thead th i {
